changed the styling so everything is even. No longer has weird padding issues. Numbers when clicked on will now populate the display area. Currently pressing an operator will break the display from adding more numbers. Next step is to revamp the UI a little bit. I'm going to remove the ability to add parens.

--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@
 	/* align-items: stretch; */
 	/* grid-template-columns: 1fr 1fr 1fr 1fr; */
 	/* grid-template-rows: auto; */
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-template-areas:
 		'clear paren1 paren2 backspace'
 		'mult divide exp mod '
